FIX: Long and Integer are deprecated